Added Ambrose & accolates route)

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -59,6 +59,15 @@
                 return {
                     changelogEntries: [
                         {
+                            title: "v2.3 - Introducing Ambrose Island",
+                            subtitle: "Released 14th August 2022",
+                            text: [],
+                            details: [
+                                "Added Ambrose Island",
+                                "Added RR9"
+                            ]
+                        },
+                        {
                             title: "v2.2 - Introducing map forfeits",
                             subtitle: "Released 10th May 2022",
                             text: [
