--- a/html/leaderboards.html
+++ b/html/leaderboards.html
@@ -180,6 +180,9 @@
                         },{
                             name: "Mendoza",
                             tag: "MEN"
+                        },{
+                            name: "Ambrose Island",
+                            tag: "AMB"
                         }],
                         stats: [],
                         map: ""
@@ -284,6 +287,8 @@
                                 return 16
                             case "MEN":
                                 return 17
+                            case "AMB":
+                                return 18
 
                             default:
                                 return "Unknown"
