--- a/html/playerpage.html
+++ b/html/playerpage.html
@@ -222,6 +222,12 @@
                         },{
                             text: 'RR7',
                             value: 'RR7'
+                        },{
+                            text: 'RR8',
+                            value: 'RR8'
+                        },{
+                            text: 'RR9',
+                            value: 'RR9'
                         }],
                         mapPicksHeaders: [{
                             text: 'Map',
@@ -246,8 +252,8 @@
                             text: "Played",
                             value: "played"
                         }],
-                        mapWinratesComps: ['RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7'],
-                        mapPicksComps: ['RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7'],
+                        mapWinratesComps: ['RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7', 'RR8', 'RR9'],
+                        mapPicksComps: ['RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7', 'RR8', 'RR9'],
                         mapWinrates: [],
                         mapPicks: [],
                         winrate: "",
@@ -419,6 +425,8 @@
                                 return "Chongqing"
                             case "MEN":
                                 return "Mendoza"
+                            case "AMB":
+                                return "Ambrose Island"
 
                             default:
                                 return "Unknown"
