--- a/html/index.html
+++ b/html/index.html
@@ -70,6 +70,7 @@
                 <v-col md="6" align="center">
                     <a href="https://twitter.com/rrstats" target="_blank" style="font-size: 0.8rem" class="mr-10">RRStats Twitter</a>
                     <a href="https://discord.gg/f7sc" target="_blank" style="font-size: 0.8rem" class="mr-10">F7SC Discord</a>
+                    <a href="https://proviednce.community/discord" target="_blank" style="font-size: 0.8rem" class="mr-10">Providence Discord</a>
                     <a href="/changelog" style="font-size: 0.8rem">Changelog (v{{ version }})</a>
                 </v-col>
                 <v-spacer></v-spacer>
