Added RRWC2022 to the pick/wr tabs on a player's page

--- a/html/playerpage.html
+++ b/html/playerpage.html
@@ -228,6 +228,9 @@
                         },{
                             text: 'RR9',
                             value: 'RR9'
+                        },{
+                            text: 'RRWC2022',
+                            value: 'RRWC2022'
                         }],
                         mapPicksHeaders: [{
                             text: 'Map',
@@ -252,8 +255,8 @@
                             text: "Played",
                             value: "played"
                         }],
-                        mapWinratesComps: ['RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7', 'RR8', 'RR9'],
-                        mapPicksComps: ['RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7', 'RR8', 'RR9'],
+                        mapWinratesComps: ['RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7', 'RR8', 'RR9','RRWC2022'],
+                        mapPicksComps: ['RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7', 'RR8', 'RR9','RRWC2022'],
                         mapWinrates: [],
                         mapPicks: [],
                         winrate: "",
