Added RR1 & RR2 to map picks & winrates

--- a/html/playerpage.html
+++ b/html/playerpage.html
@@ -202,6 +202,12 @@
                             value: 'maps'
                         }],
                         competitions: [{
+                            text: "RR1",
+                            value: 'RR1'
+                        }, {
+                            text: "RR2",
+                            value: 'RR2'
+                        }, {
                             text: "RR3",
                             value: 'RR3'
                         },{
@@ -255,8 +261,8 @@
                             text: "Played",
                             value: "played"
                         }],
-                        mapWinratesComps: ['RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7', 'RR8', 'RR9','RRWC2022'],
-                        mapPicksComps: ['RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7', 'RR8', 'RR9','RRWC2022'],
+                        mapWinratesComps: ['RR1', 'RR2', 'RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7', 'RR8', 'RR9','RRWC2022'],
+                        mapPicksComps: ['RR1', 'RR2', 'RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7', 'RR8', 'RR9','RRWC2022'],
                         mapWinrates: [],
                         mapPicks: [],
                         winrate: "",
