--- a/html/backend/comps.html
+++ b/html/backend/comps.html
@@ -38,7 +38,7 @@
                                                     </template>
 
                                                     <v-card>
-                                                        <v-card-title>Edit Competition - {{ itemEdit._id }}</v-card-title>
+                                                        <v-card-title>Edit Competition - {{ itemEdit.uuid }}</v-card-title>
                                                         <v-card-text>
                                                             <v-container>
                                                                 <v-row>
@@ -224,7 +224,7 @@
                     },
                     async playerNameToId() {
                         let response = await axios.get("/backend/api/playerLookup?name=" + this.playerToId);
-                        this.idToPlayer = response.data._id;
+                        this.idToPlayer = response.data.uuid;
                     },
                     close() {
                         this.editDialog = false;
