--- a/html/backend/matches.html
+++ b/html/backend/matches.html
@@ -38,7 +38,7 @@
                                                     </template>
 
                                                     <v-card>
-                                                        <v-card-title>Edit match - {{ itemEdit._id }}</v-card-title>
+                                                        <v-card-title>Edit match - {{ itemEdit.uuid }}</v-card-title>
                                                         <v-card-text>
                                                             <v-container>
                                                                 <v-row>
