Updated frontpage & changelog

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -59,6 +59,22 @@
                 return {
                     changelogEntries: [
                         {
+                            title: "v2.4 - Leaderboard update",
+                            subtitle: "Released 26th November 2022",
+                            text: [],
+                            details: [
+                                "Added RRWC2022",
+                                "Added Providence & HITMAPS links to main page",
+                                "Redesigned leaderboard page",
+                                "Added Leaderboard statistic: Amount of Matches won",
+                                "Added Leaderboard statistic: Amount of maps played",
+                                "Added Leaderboard statistic: Amount of maps won",
+                                "Added Leaderboard statistic: Most maps won in a row",
+                                "Renamed Leaderboard statistic: Amount of matches => Amount of matches won",
+                                "Renamed Leaderboard statistic: Longest winning-streak => Most matches won in a row"
+                            ]
+                        },
+                        {
                             title: "v2.3 - Introducing Ambrose Island",
                             subtitle: "Released 14th August 2022",
                             text: [],
