--- a/html/index.html
+++ b/html/index.html
@@ -71,6 +71,7 @@
                     <a href="https://twitter.com/rrstats" target="_blank" style="font-size: 0.8rem; color: black" class="mr-10">RRStats Twitter</a>
                     <a href="https://discord.gg/f7sc" target="_blank" style="font-size: 0.8rem; color: black" class="mr-10">F7SC Discord</a>
                     <a href="https://providence.community/discord" target="_blank" style="font-size: 0.8rem; color: black" class="mr-10">Providence Discord</a>
+                    <a href="https://hitmaps.com" target="_blank" style="font-size: 0.8rem; color: black" class="mr-10">HITMAPS</a>
                     <a href="/changelog" style="font-size: 0.8rem; color: black">Changelog (v{{ version }})</a>
                 </v-col>
                 <v-spacer></v-spacer>
