--- a/html/changelog.html
+++ b/html/changelog.html
@@ -70,7 +70,7 @@
                                 "Added Leaderboard statistic: Amount of maps played",
                                 "Added Leaderboard statistic: Amount of maps won",
                                 "Added Leaderboard statistic: Most maps won in a row",
-                                "Renamed Leaderboard statistic: Amount of matches => Amount of matches won",
+                                "Renamed Leaderboard statistic: Amount of matches => Amount of matches played",
                                 "Renamed Leaderboard statistic: Longest winning-streak => Most matches won in a row"
                             ]
                         },
