Added matches overview page

--- a/html/index.html
+++ b/html/index.html
@@ -33,6 +33,10 @@
             <v-row style="margin-top: 150px">
                 <v-spacer></v-spacer>
                 <v-col md="6">
+                    <v-alert type="info">
+                        RRStats now has an overview page for all matches of the current tournament!
+                        <a href="/matches" style="color: white">Take me there</a>
+                    </v-alert>
                     <v-card elevation="12">
                         <v-card-title>
                             <v-tabs v-model="tabSelected">
