Finalized provisional hitmaps integration

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -59,6 +59,16 @@
                 return {
                     changelogEntries: [
                         {
+                            title: "v2.5 - Matches overview & Hitmaps integration",
+                            subtitle: "Released 21th May 2023",
+                            text: [],
+                            details: [
+                                "Added RR10 & RR11",
+                                "Added match overview page for the newest competition",
+                                "Matches are pulled directly from hitmaps"
+                            ]
+                        },
+                        {
                             title: "v2.4 - Leaderboard update",
                             subtitle: "Released 26th November 2022",
                             text: [],
