--- a/html/playerpage.html
+++ b/html/playerpage.html
@@ -237,6 +237,12 @@
                         },{
                             text: 'RRWC2022',
                             value: 'RRWC2022'
+                        },{
+                            text: 'RR10',
+                            value: 'RR10'
+                        },{
+                            text: 'RR11',
+                            value: 'RR11'
                         }],
                         mapPicksHeaders: [{
                             text: 'Map',
@@ -261,8 +267,8 @@
                             text: "Played",
                             value: "played"
                         }],
-                        mapWinratesComps: ['RR1', 'RR2', 'RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7', 'RR8', 'RR9','RRWC2022'],
-                        mapPicksComps: ['RR1', 'RR2', 'RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7', 'RR8', 'RR9','RRWC2022'],
+                        mapWinratesComps: ['RR1', 'RR2', 'RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7', 'RR8', 'RR9','RRWC2022', 'RR10', 'RR11'],
+                        mapPicksComps: ['RR1', 'RR2', 'RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7', 'RR8', 'RR9','RRWC2022', 'RR10', 'RR11'],
                         mapWinrates: [],
                         mapPicks: [],
                         winrate: "",
