--- a/html/index.html
+++ b/html/index.html
@@ -33,10 +33,6 @@
             <v-row style="margin-top: 150px">
                 <v-spacer></v-spacer>
                 <v-col md="6">
-                    <v-alert type="info">
-                        RRStats now has an overview page for all matches of the current tournament!
-                        <a href="/matches" style="color: white">Take me there</a>
-                    </v-alert>
                     <v-card elevation="12">
                         <v-card-title>
                             <v-tabs v-model="tabSelected">
@@ -45,11 +41,10 @@
                                 <v-tab>Records</v-tab>
                                 <v-menu offset-y>
                                   <template v-slot:activator="{ on, attrs }">
-                                    <v-tab v-bind="attrs" v-on="on">Tournament Statistics</v-tab>
+                                    <v-tab v-bind="attrs" v-on="on">Tournaments</v-tab>
                                   </template>
                                   <v-list>
-                                    <v-list-item v-for="comp in competitions" v-if="comp.hitmapsStatsURL !== ''" :href="comp.hitmapsStatsURL" target="_blank" :key="comp.tag">
-                                      <v-list-item-icon><v-icon>mdi-open-in-new</v-icon></v-list-item-icon>
+                                    <v-list-item v-for="comp in competitions" v-if="comp.officialCompetition" :href=`/matches?tournament=${comp.tag}` target="_blank" :key="comp.tag">
                                       <v-list-item-title>{{ comp.tag }}</v-list-item-title>
                                     </v-list-item>
                                   </v-list>
